load vue code from external js file that is being served by express.static

--- a/liamhome.html
+++ b/liamhome.html
@@ -8,11 +8,4 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-<script>
-var home = new Vue({
-  el: '#home',
-  data: {
-    welcome: 'welcome to the website of Liam Burgoyne'
-  }
-})
-</script>
+<script src="homepage.js"></script>
