add form tags to navbar links and add bio id

--- a/liamhome.html
+++ b/liamhome.html
@@ -17,24 +17,36 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
+        <form>
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </form>
       </li>
       <li class="nav-item">
+        <form>
         <a class="nav-link" href="#">About</a>
+        </form>
       </li>
       <li class="nav-item dropdown">
+        <form>
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Media
         </a>
+        </form>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <form>
           <a class="dropdown-item" href="#">Facebook</a>
+          <form>
           <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
+          <form>
           <a class="dropdown-item" href="#">YouTube</a>
+          </form>
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <form>
+        <a class="nav-link" href="#">Shop</a>
+        </form>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -47,6 +59,8 @@
 </head>
 <div id="home">
 <h1>{{ welcome }}</h1>
+</div>
+<div id="bio">
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
