--- a/liamhome.html
+++ b/liamhome.html
@@ -27,18 +27,17 @@
         </form>
       </li>
       <li class="nav-item dropdown">
-        <form>
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Media
         </a>
-        </form>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <form>
+          <form action="https://www.facebook.com/bantertruck" method="get">
           <a class="dropdown-item" href="#">Facebook</a>
-          <form>
+          </form>
+          <form action="">
           <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
-          <form>
+          <form action="">
           <a class="dropdown-item" href="#">YouTube</a>
           </form>
         </div>
