add aeu spotify link

--- a/liamhome.html
+++ b/liamhome.html
@@ -31,7 +31,8 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="https://www.facebook.com/bantertruck">Facebook</a>
           <a class="dropdown-item" href="#">YouTube</a>
-        </div>
+          <a class="dropdown-item" href="https://open.spotify.com/artist/28IImD2QqPWTQ2cWgOMQNT">Spotify</a>
+          </div>
       </li>
       <li class="nav-item">
         <form action="/shop" method="get">
