add contact to nav

--- a/liamhome.html
+++ b/liamhome.html
@@ -9,7 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <div id="topMenu">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">Navigation</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,6 +37,11 @@
       <li class="nav-item">
         <form action="/shop" method="get">
         <a class="nav-link" href="#">Shop</a>
+        </form>
+      </li>
+      <li class="nav-item">
+        <form action="/contact" method="get">
+        <a class="nav-link" href="#">Contact</a>
         </form>
       </li>
     </ul>
