--- a/liamhome.html
+++ b/liamhome.html
@@ -24,6 +24,11 @@
         <a class="nav-link" href="#">About</a>
         </form>
       </li>
+      <li class="nav-item">
+        <form action="/gear" method="get">
+        <a class="nav-link" href="#">Gear</a>
+        </form>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Media
