--- a/liamhome.html
+++ b/liamhome.html
@@ -65,6 +65,9 @@
   <div id="awards">
   </div>
 </div>
+<div id="musicplayer">
+  [Spotify height="390" uri="spotify:album:5KRlK4QiyIYSiI2stiRIm7"]
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script src="homepage.js"></script>
