fix spotify player

--- a/liamhome.html
+++ b/liamhome.html
@@ -66,7 +66,7 @@
   </div>
 </div>
 <div id="musicplayer">
-  [Spotify height="390" uri="spotify:album:5KRlK4QiyIYSiI2stiRIm7"]
+  <iframe src="https://open.spotify.com/embed/album/5KRlK4QiyIYSiI2stiRIm7" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
