create media html page

--- a/liamhome.html
+++ b/liamhome.html
@@ -65,8 +65,7 @@
   <div id="awards">
   </div>
 </div>
-<div id="musicplayer">
-  <iframe src="https://open.spotify.com/embed/album/5KRlK4QiyIYSiI2stiRIm7" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<div id="medialinks">
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
