create about page

--- a/liamhome.html
+++ b/liamhome.html
@@ -20,24 +20,16 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <form action="/" method="get">
+        <form action="/about" method="get">
         <a class="nav-link" href="#">About</a>
         </form>
       </li>
+      <form action="/media" method="get">
       <li class="nav-item">
-        <form action="/gear" method="get">
-        <a class="nav-link" href="#">Gear</a>
-        </form>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link">
           Media
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="https://www.facebook.com/bantertruck">Facebook</a>
-          <a class="dropdown-item" href="#">YouTube</a>
-          <a class="dropdown-item" href="https://open.spotify.com/artist/28IImD2QqPWTQ2cWgOMQNT">Spotify</a>
-          </div>
+      </form>
       </li>
       <li class="nav-item">
         <form action="/shop" method="get">
