--- a/liamhome.html
+++ b/liamhome.html
@@ -21,7 +21,7 @@
       </li>
       <li class="nav-item">
         <form action="/about" method="get">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="/about">About</a>
         </form>
       </li>
       <form action="/media" method="get">
@@ -38,7 +38,7 @@
       </li>
       <li class="nav-item">
         <form action="/contact" method="get">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="/contact">Contact</a>
         </form>
       </li>
     </ul>
