--- a/liamhome.html
+++ b/liamhome.html
@@ -59,12 +59,13 @@
 </div>
 <div id="medialinks">
   {{ mediaLinks }}
-	<div class="icons-social">
-		<a target="_blank" href=""><i class="fab fa-youtube"></i></a>
-		<a target="_blank" href="https://open.spotify.com/artist/28IImD2QqPWTQ2cWgOMQNT"><i class="fab fa-spotify"></i></a>
-		<a target="_blank" href="https://www.facebook.com/bantertruck"><i class="fab fa-facebook"></i></a>
 </div>
+<div class="icons-social">
+  <a target="_blank" href=""><i class="fab fa-youtube"></i></a>
+  <a target="_blank" href="https://open.spotify.com/artist/28IImD2QqPWTQ2cWgOMQNT"><i class="fab fa-spotify"></i></a>
+  <a target="_blank" href="https://www.facebook.com/bantertruck"><i class="fab fa-facebook"></i></a>
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script src="homepage.js"></script>
+<script defer src="fontawesome.js"></script>
+<script defer src="fa-brands.min.js"></script>
